--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,5 +1,5 @@
 [phases.setup]
-nixPkgs = ['...', 'php81', 'php81Packages.composer']
+nixPkgs = ['php81', 'php81Packages.composer']
 
 [phases.install]
 cmds = ['composer install --no-dev --optimize-autoloader']
