--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,8 @@
         ],
         "post-install-cmd": [
             "php artisan clear-compiled",
-            "php artisan optimize"
+            "php artisan optimize",
+            "php artisan storage:link --force"
         ],
         "dev": [
             "Composer\\Config::disableProcessTimeout",
